# BookInventory

./: .gitignore  .pre-commit-config.yaml  sonar-project.properties
.github/workflows/: sonarcloud.yml
backend/: .coveragerc  .env.example  pyproject.toml
backend/config/: settings.py
backend/tests/: test_smoke.py
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx
